methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:5: error: not found: value estSurBaggle
    for (j<-1 to 7) { avance ; if (estSurBaggle) {bagel=true}
                                   ^